--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
         <!-- For iPhone 4 with high-resolution Retina display: -->
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="dackel.png">
         <!-- For first-generation iPad: -->
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="dackel.png">
         <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-        <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="dackel.png">
 
-        <link rel="shortcut icon" href="favicon.ico?v=1">
+        <!-- <link rel="shortcut icon" href="favicon.ico?v=1"> -->
+        <link rel="shortcut icon" href="dackel.png">
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main-1.6.css">
