--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 <div id="heading" class="wrapper clearfix">
                     <nav id="nav">
                         <ul>
-                            <li><a href="#brideandgroom">THE BRIDE &amp; GROOM</a></li>
-                            <li><a href="#wedding">WEDDING</a></li>
-                            <li><a href="#accomodations">ACCOMODATIONS</a></li>
-                            <li><a href="#registry">REGISTRY</a></li>
-                            <li><a href="http://sarahlovesbradley.tumblr.com" target="_blank">BLOG</a></li>
+                            <!-- <li><a href="#brideandgroom">THE BRIDE &amp; GROOM</a></li> -->
+                            <li><a href="#wedding">BODA</a></li>
+                            <li><a href="#accomodations">HOSPEDAJE</a></li>
+                            <li><a href="#registry">RSVP</a></li>
+                            <!-- <li><a href="http://sarahlovesbradley.tumblr.com" target="_blank">BLOG</a></li> -->
                         </ul>
 
                     </nav>
@@ -61,21 +61,17 @@
                     <header>
                         <div id="introtext">
                             <!-- <span class="head-sarah">Ana</span> -->
-                            <span class="head-brad">Ana&nbsp;
-                                <span class="amp">&amp;</span>
-                                Daniel
+                            <span class="head-brad">Ana y Daniel
+
                             </span>
                             <div class="date">9 de Diciembre 2017</div>
                         </div>
 
-                        <div class="learnmore" style="background-color: red; padding: 30px 0 30px 0; font-size: 22px;">
-                            Learn more about Bradley's mobile &amp; web design/development creations at &nbsp;&nbsp;<a href="http://scal.io" target="_blank"><strong>http://scal.io</strong></a>
-                        </div>
                     </header>
 
                     <div class="clearfix"></div>
 
-                    <section id="brideandgroom" class="clearfix">
+                    <!-- <section id="brideandgroom" class="clearfix">
 
                         <h1>The Bride and Groom</h1>
 
@@ -86,7 +82,7 @@
                                 <img src="img/sarahThumb.jpg" class="thumb" alt="Sarah" />
                                 Sarah is most thankful to her parents for the gift of two loving big brothers &amp; five amazing role-model sisters. As the second-youngest, Sarah spent her childhood twirling &amp; dancing around, putting on talent shows for her parents &amp; grandparents. Her creative spirit and eye for design was established at a young age, as she highly disapproved of Mattel’s © furnishings and décor within her Barbie House. If Barbie needed an interior makeover (which was frequent) Sarah looked through Sunday newspaper ads &amp; IKEA magazines for inspiration, drew the new contents by hand and placed them as backdrops in the Barbie house. After graduation from Mater Dei High School, Sarah explored the metropolitan life in San Francisco and graduated with a BS in Interior Design from San Francisco State University. Sarah is adding to her vows that she will forever allow a one-room “man-den” with it’s contents and décor subject to Bradley’s discretion.</p>
 
-                        </div><!--end column-->
+                        </div>
                         <div class="column right">
 
                             <h2>BRADLEY</h2>
@@ -94,7 +90,7 @@
                                 <img src="img/bradThumb.jpg" class="thumb" alt="Brad" />
                                 Born in Mission Viejo, California, Bradley spent half of his life living with his mother in San Diego and half with his wonderful Wisconsin family. Bradley grew up playing ice hockey while secretly learning how to build computers. Half jock, half nerd, he has cultivated these interests well into his adult life, that make him who he is today. After his graduation from the University of San Francisco with a degree in Information Systems, Bradley worked for Yahoo! for seven years, and continued to explore the tech startup scene in  San Francisco. With an entrepreneurial spirit and passion for technology, Bradley now runs his own software company, Scal.io, building hand-crafted mobile,  web, and desktop apps for tech companies in the Silicon Valley and beyond. Bradley is adding to his vows a lifetime IT guarantee to Sarah, that he will be readily available 24/7 to troubleshoot... anything &amp; everything technical.</p>
 
-                        </div><!--end column-->
+                        </div>
 
                         <div class="clearfix"></div>
 
@@ -110,7 +106,7 @@
 
                             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeoOxo5RulmWVwIl0PETNcyZJlsVW4bby8WOu6kNc-8RFozVQ/viewform?embedded=true" width="760" height="1110" frameborder="0" marginheight="0" marginwidth="0" align="center">Loading...</iframe>
 
-                        </div><!--end column-->
+                        </div>
 
                         <div class="column full">
 
@@ -123,9 +119,9 @@
                             <h2>THE ENGAGEMENT</h2>
                             <p>Down in San Diego for a weekend to visit Bradley’s mom, the pair decided to spend the beautiful morning at Balboa Park. After returning to their hotel, Bradley asked Sarah to run up to their room for a bottle of wine that had been chilling. Bradley said he was going to ask concierge for a “wine opener” and that he’d meet her in the courtyard. As Sarah opened the door to the room, she “freaked out”, thinking she was in the wrong room. It was decorated with bouquets of her favorite flowers, decadent treats and champagne. Rose petals on the floor led her to the open balcony, and as she walked out she saw Bradley waiting for her down below, with a huge grin on his face. And like out of a fairy tale, Romeo asked Juliet to be his wife. She giggled, and said yes. Bradley had it all captured by a hidden, sniper-style photographer.</p>
 
-                        </div><!--end column-->
+                        </div>
 
-                    </section>
+                    </section> -->
 
                     <section id="wedding" class="clearfix">
 
