--- a/index.html
+++ b/index.html
@@ -125,34 +125,35 @@
 
                     <section id="wedding" class="clearfix">
 
-                        <h1>Wedding</h1>
+                        <h1>Boda</h1>
 
                         <div class="column left">
-                            <h2>CEREMONY</h2>
+                            <h2>CEREMONIA</h2>
                             <p>
-                                The Inn at Rancho Santa Fe <br />
-                                Rancho Santa Fe, California <br /><br />
-                                Friday, September 6, 2013 <br />
-                                6:00 PM at the Croquet Lawn <br /><br />
-                                *Adult reception to follow <br /><br /><br />
+                                Frente Al Punto<br />
+                                Calle Playa Azul 17, Sayulita<br />
+                                Nayarit, Mexico <br /><br />
+                                Sabado, 9 de diciembre 2017 <br />
+                                5:00 PM  <br /><br />
+                                <br /><br /><br />
 
-                                <img src="img/theinn-large.png" class="theinn" alt="The Inn at Rancho Santa Fe" />
+                                <!-- <img src="img/theinn-large.png" class="theinn" alt="The Inn at Rancho Santa Fe" /> -->
                             </p>
 
 
 
                         </div><!--end column-->
                         <div class="column right">
-                            <h2>SCHEDULE OF EVENTS</h2>
+                            <h2>ITINERARIO</h2>
                             <p>
-                                Rehearsal Dinner <br />
-                                Thursday, September 5th at 8pm<br /><br />
-                                Golf <br />
-                                Friday, September 6th at 9am<br /><br />
-                                Ceremony <br />
-                                Friday, September 6th at 6pm (reception to follow)<br /><br />
-                                Breakfast &amp; Bocce <br />
-                                Saturday, September 7th at 10am<br />
+                                Viernes, 8 de diciembre <br />
+                                <!-- 4 PM - Despedida para Ana (solo Mujeres) - Don Pedro's<br /> -->
+                                8 PM --- Fiesta de bienvenida --- Lugar por confirmar<br /><br />
+                                Sabado, 9 de diciembre<br />
+                                5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
+                                Domingo, 10 de diciembre<br />
+                                11 AM --- Desayuno y Volleyball<br /><br />
+
                             </p>
                         </div><!--end column-->
 
@@ -163,7 +164,7 @@
                             <div class="hr-b"></div>
                         </div>
 
-                        <h2>BRIDAL PARTY</h2>
+                        <!-- <h2>BRIDAL PARTY</h2>
 
                         <div class="column left bp">
 
@@ -178,7 +179,7 @@
                                 </p>
                             </div>
 
-                        </div><!--end column-->
+                        </div>
                         <div class="column right bp">
 
                             <h2>Groomsmen</h2>
@@ -192,23 +193,22 @@
                                 </p>
                             </div>
 
-                        </div><!--end column-->
+                        </div> -->
                     </section>
 
                     <section id="accomodations" class="clearfix">
 
-                        <h1>Accomodations</h1>
+                        <h1>Hospedaje</h1>
 
                         <div class="column left">
 
-                            <h2>HOTELS</h2>
+                            <h2>HOTELES</h2>
                             <p>
-                                (At the venue) <br />
-                                The Inn at Rancho Santa Fe <br />
-                                5951 Linea Del Cielo <br />
-                                Rancho Santa Fe, CA 92067 <br />
-                                <a href="tel:1-858-756-1131">(858) 756-1131</a> <br />
-                                $279 <br />
+                                Villa Amor<br />
+                                Camino a Playa los Muertos S/N<br />
+                                <a href="http://www.villaamor.com">Website</a> <br />
+                                <a href="tel:+52 329 291 3010">+52 (329) 291 3010</a> <br />
+                                $230 --- $265 USD<br />
                                 - <br />
                                 Morgan Run Resort &amp; Club (1.9 miles away) <br />
                                 5690 Cancha De Golf <br />
@@ -250,7 +250,7 @@
 
                         <div class="column full">
 
-                            <h2>VICINITY MAP</h2>
+                            <h2>MAPA DE SAYULITA</h2>
 
                             <div id="gmap">
                                 <iframe src="https://www.google.com/maps/d/embed?mid=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&z=15&ll=20.8689, -105.4408" width="760" height="1760"></iframe>
