--- a/index.html
+++ b/index.html
@@ -204,31 +204,42 @@
 
                             <h2>HOTELES</h2>
                             <p>
+                                Casa Nawalli<br />
+                                Miramar 13<br />
+                                <a href="https://www.casawalli.com">Website</a> <br />
+                                <a href="tel:52-329-291-3087">+52 (329) 291 3087</a> <br />
+                                $120 --- $180 USD<br />
+                                <br />
                                 Villa Amor<br />
                                 Camino a Playa los Muertos S/N<br />
                                 <a href="http://www.villaamor.com">Website</a> <br />
-                                <a href="tel:+52 329 291 3010">+52 (329) 291 3010</a> <br />
+                                <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br />
                                 $230 --- $265 USD<br />
-                                - <br />
-                                Morgan Run Resort &amp; Club (1.9 miles away) <br />
-                                5690 Cancha De Golf <br />
-                                Rancho Santa Fe, CA 92091 <br />
-                                <a href="tel:1-866-599-6674">(866) 599-6674</a> <br />
-                                $90 <br />
-                                - <br />
-                                (Closer to the beach) <br />
-                                Courtyard San Diego Solana Beach/Del Mar (4.5 miles away) <br />
-                                717 S Hwy 101 <br />
-                                Solana Beach, CA <br />
-                                <a href="tel:1-858-792-8200">(858) 792-8200</a> <br />
-                                $109 <br />
+                                <br />
+                                Casa Love<br />
+                                Delfines 9<br />
+                                <a href="http://casalove.pachamamasayulita.com">Website</a> <br />
+                                <!-- <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br /> -->
+                                $80 --- $150 USD<br />
+                                <br />
+                                Hotel Hafa<br />
+                                Jose Marisal 4<br />
+                                <a href="http://hotelhafasayulita.com">Website</a> <br />
+                                <a href="tel:52-329-291-3806">+52 (329) 291 3806</a> <br />
+                                $50 --- $85 USD<br />
+                                <br />
+                                Mas opciones<br />
+                                <a href="http://www.sayulitalife.com">Sayulita Life</a> <br />
+                                <a href="http://www.airbnb.com">Airbnb</a> <br />
+
+
                             </p>
                         </div><!--end column-->
 
                         <div class="column right">
-                            <h2>DIRECTIONS</h2>
-                            <p>
-                                Northbound from San Diego <br /><br />
+                            <h2>COMO LLEGAR</h2>
+                             <!-- <p>
+                                 Northbound from San Diego <br /><br />
 
                                 Take Interstate 5 North to the Villa de La Valle exit #36.  Turn right (east) onto Via de La Valle, and proceed for 4 miles. After crossing La Gracia, turn left on Via de Santa Fe following the signs to Rancho Santa Fe.  At the first stop sign, turn left onto Paseo Delicias and drive 2 blocks to a five way stop.  Take a slight right onto Linea del Cielo and proceed for one block.  The Inn is located on the left side of the road at 5951 Linea del Cielo.
                                 <br /><br />
@@ -237,7 +248,7 @@
 
                                 Take Interstate 5 South to the Lomas Santa Fe exit #37.  Turn left (east) onto Lomas Santa Fe, and proceed 4.5 miles.  The road name will change to Linea Del Cielo.  The Inn is located on the right side of the road at 5951 Linea del Cielo.
                                 <br />
-                            </p>
+                            </p> -->
 
                         </div><!--end column-->
 
@@ -259,7 +270,7 @@
                                 <small><a href="https://maps.google.com/maps/ms?msid=205751736116737027595.0004d416d6aa1647722db&amp;msa=0&amp;ie=UTF8&amp;t=m&amp;ll=32.91418,-116.982422&amp;spn=0.806997,1.167297&amp;z=9&amp;output=embed" target="_blank">View larger map</a></small> -->
                             </div>
                         </div>
-
+<!--
                         <div class="clearfix"></div>
 
                         <div class="column full">
@@ -272,7 +283,7 @@
                             <p>
                                 Choose to relax and soak up the California sunshine at the resort's pool, or meander across the street to explore the boutiques, jewelry stores, restaurants and antique shops at The Village of Rancho Santa Fe (fondly referred to as "The Village" by the residents).  A friday morning tee time will be arranged for those who are interested, at Rancho Santa Fe Golf Club- a private, 18-hole championship golf course considered one of the Top 20 Best Golf Courses in California.
                             </p>
-                        </div><!--end column-->
+                        </div>
 
                         <div class="column full">
                             <h2>HISTORY OF THE INN</h2>
@@ -291,23 +302,24 @@
                                 Go <a href="http://www.theinnatrsf.com/press_media/" target="_blank">here</a> and <a href="http://ranchandcoast.com/DETOUR/27/destinations/4506/THEN-NOW-INN-AT-RANCHO-SANTA-FE/IMAGE/10526/" target="_blank">here</a> for more information.
 
                             </p>
-                        </div><!--end column-->
+                        </div> -->
 
                     </section>
 
                     <section id="registry" class="clearfix">
 
-                        <h1>Registry</h1>
+                        <!-- <h1>RSVP</h1> -->
 
                         <div class="column full">
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeoOxo5RulmWVwIl0PETNcyZJlsVW4bby8WOu6kNc-8RFozVQ/viewform?embedded=true" width="760" height="1110" frameborder="0" marginheight="0" marginwidth="0" align="center">Loading...</iframe>
 
-                            <p>Due to the nature of city life (not a great deal of storage space), we have decided to embrace the HONEYMOON REGISTRY site.  However, if your prefer the traditional route, we are registered at Williams Sonoma, Sur La Table, &amp; Macy's.  A link for the registry sites will be coming soon!</p>
+                            <!-- <p>Due to the nature of city life (not a great deal of storage space), we have decided to embrace the HONEYMOON REGISTRY site.  However, if your prefer the traditional route, we are registered at Williams Sonoma, Sur La Table, &amp; Macy's.  A link for the registry sites will be coming soon!</p>
                             <p>
                             LOVE NOTES FOR SARAH &amp; BRADLEY <br />
                             Email us at ... <br />
-                            </p>
+                            </p> -->
 
-                        </div><!--end column-->
+                        </div>
 
                     </section>
 
