--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
                     <header>
                         <div id="introtext">
                             <!-- <span class="head-sarah">Ana</span> -->
-                            <span class="head-brad">Ana y Daniel
-
-                            </span>
+                            <span class="head-brad">Ana y Daniel</span>
                             <div class="date">9 de Diciembre 2017</div>
                         </div>
 
@@ -132,8 +130,8 @@
                             <p>
                                 Frente Al Punto<br />
                                 Calle Playa Azul 17, Sayulita<br />
-                                Nayarit, Mexico <br /><br />
-                                Sabado, 9 de diciembre 2017 <br />
+                                Nayarit, M&eacute;xico <br /><br />
+                                S&aacute;bado, 9 de diciembre 2017 <br />
                                 5:00 PM  <br /><br />
                                 <br /><br /><br />
 
@@ -149,7 +147,7 @@
                                 Viernes, 8 de diciembre <br />
                                 <!-- 4 PM - Despedida para Ana (solo Mujeres) - Don Pedro's<br /> -->
                                 8 PM --- Fiesta de bienvenida --- Lugar por confirmar<br /><br />
-                                Sabado, 9 de diciembre<br />
+                                S&aacute;bado, 9 de diciembre<br />
                                 5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
                                 Domingo, 10 de diciembre<br />
                                 11 AM --- Desayuno y Volleyball<br /><br />
@@ -204,31 +202,31 @@
 
                             <h2>HOTELES</h2>
                             <p>
-                                Casa Nawalli<br />
+                                Casa Nawalli --- Jardin, 2 cuadras de la playa<br />
                                 Miramar 13<br />
                                 <a href="https://www.casawalli.com">Website</a> <br />
                                 <a href="tel:52-329-291-3087">+52 (329) 291 3087</a> <br />
                                 $120 --- $180 USD<br />
                                 <br />
-                                Villa Amor<br />
+                                Villa Amor --- Junto a la playa<br />
                                 Camino a Playa los Muertos S/N<br />
                                 <a href="http://www.villaamor.com">Website</a> <br />
                                 <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br />
                                 $230 --- $265 USD<br />
                                 <br />
-                                Casa Love<br />
+                                Casa Love --- Estilo Hippie<br />
                                 Delfines 9<br />
                                 <a href="http://casalove.pachamamasayulita.com">Website</a> <br />
                                 <!-- <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br /> -->
                                 $80 --- $150 USD<br />
                                 <br />
-                                Hotel Hafa<br />
-                                Jose Marisal 4<br />
+                                Hotel Hafa --- Chafa<br />
+                                Jos&eacute; Marisal 4<br />
                                 <a href="http://hotelhafasayulita.com">Website</a> <br />
                                 <a href="tel:52-329-291-3806">+52 (329) 291 3806</a> <br />
                                 $50 --- $85 USD<br />
                                 <br />
-                                Mas opciones<br />
+                                M&aacute;s opciones<br />
                                 <a href="http://www.sayulitalife.com">Sayulita Life</a> <br />
                                 <a href="http://www.airbnb.com">Airbnb</a> <br />
 
@@ -237,7 +235,7 @@
                         </div><!--end column-->
 
                         <div class="column right">
-                            <h2>COMO LLEGAR</h2>
+                            <!-- <h2>COMO LLEGAR</h2> -->
                              <!-- <p>
                                  Northbound from San Diego <br /><br />
 
