--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                         <h1>Boda</h1>
 
-                        <div class="column left">
+                        <div class="column full">
                             <h2>CEREMONIA</h2>
                             <p>
                                 Frente Al Punto<br />
@@ -141,16 +141,16 @@
 
 
                         </div><!--end column-->
-                        <div class="column right">
+                        <div class="column full">
                             <h2>ITINERARIO</h2>
                             <p>
                                 Viernes, 8 de diciembre <br />
-                                <!-- 4 PM - Despedida para Ana (solo Mujeres) - Don Pedro's<br /> -->
-                                8 PM --- Fiesta de bienvenida --- Lugar por confirmar<br /><br />
+                                <!-- 4 a 7 PM  Despedida para Ana (s&oacute;lo mujeres) Don Pedro's<br /> -->
+                                8 a 10 PM --- Fiesta de bienvenida --- Lugar por confirmar<br /><br />
                                 S&aacute;bado, 9 de diciembre<br />
                                 5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
                                 Domingo, 10 de diciembre<br />
-                                11 AM --- Desayuno y Volleyball<br /><br />
+                                11 AM --- Desayuno y Volleybol<br /><br />
 
                             </p>
                         </div><!--end column-->
@@ -202,25 +202,25 @@
 
                             <h2>HOTELES</h2>
                             <p>
-                                Casa Nawalli --- Jardin, 2 cuadras de la playa<br />
+                                Casa Nawalli<br />
                                 Miramar 13<br />
                                 <a href="https://www.casawalli.com">Website</a> <br />
                                 <a href="tel:52-329-291-3087">+52 (329) 291 3087</a> <br />
                                 $120 --- $180 USD<br />
                                 <br />
-                                Villa Amor --- Junto a la playa<br />
+                                Villa Amor<br />
                                 Camino a Playa los Muertos S/N<br />
                                 <a href="http://www.villaamor.com">Website</a> <br />
                                 <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br />
                                 $230 --- $265 USD<br />
                                 <br />
-                                Casa Love --- Estilo Hippie<br />
+                                Casa Love<br />
                                 Delfines 9<br />
                                 <a href="http://casalove.pachamamasayulita.com">Website</a> <br />
                                 <!-- <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br /> -->
                                 $80 --- $150 USD<br />
                                 <br />
-                                Hotel Hafa --- Chafa<br />
+                                Hotel Hafa<br />
                                 Jos&eacute; Marisal 4<br />
                                 <a href="http://hotelhafasayulita.com">Website</a> <br />
                                 <a href="tel:52-329-291-3806">+52 (329) 291 3806</a> <br />
@@ -308,8 +308,8 @@
 
                         <!-- <h1>RSVP</h1> -->
 
-                        <div class="column full">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeoOxo5RulmWVwIl0PETNcyZJlsVW4bby8WOu6kNc-8RFozVQ/viewform?embedded=true" width="760" height="1110" frameborder="0" marginheight="0" marginwidth="0" align="center">Loading...</iframe>
+                        <div class="column full" >
+                            <p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeoOxo5RulmWVwIl0PETNcyZJlsVW4bby8WOu6kNc-8RFozVQ/viewform?embedded=true" width="760" height="1010" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></p>
 
                             <!-- <p>Due to the nature of city life (not a great deal of storage space), we have decided to embrace the HONEYMOON REGISTRY site.  However, if your prefer the traditional route, we are registered at Williams Sonoma, Sur La Table, &amp; Macy's.  A link for the registry sites will be coming soon!</p>
                             <p>
