--- a/index.html
+++ b/index.html
@@ -121,11 +121,17 @@
 
                     </section> -->
 
+
                     <section id="wedding" class="clearfix">
 
                         <h1>Boda</h1>
 
                         <div class="column full">
+                            <div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'de,en,fa,fr,hr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
                             <h2>CEREMONIA</h2>
                             <p>
                                 Frente Al Punto<br />
