--- a/index.html
+++ b/index.html
@@ -127,11 +127,7 @@
                         <h1>Boda</h1>
 
                         <div class="column full">
-                            <div id="google_translate_element"></div><script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'de,en,fa,fr,hr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
-}
-</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
                             <h2>CEREMONIA</h2>
                             <p>
                                 Frente Al Punto<br />
@@ -143,6 +139,11 @@ function googleTranslateElementInit() {
 
                                 <!-- <img src="img/theinn-large.png" class="theinn" alt="The Inn at Rancho Santa Fe" /> -->
                             </p>
+                            <div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'es,de,en,fa,fr,hr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 
 
@@ -153,9 +154,9 @@ function googleTranslateElementInit() {
                                 Viernes, 8 de diciembre <br />
                                 <!-- 4 a 7 PM  Despedida para Ana (s&oacute;lo mujeres) Don Pedro's<br /> -->
                                 8 a 10 PM --- Fiesta de bienvenida --- Lugar por confirmar<br /><br />
-                                S&aacute;bado, 9 de diciembre<br />
+                                S&aacute;bado, 9 de diciembre <br />
                                 5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
-                                Domingo, 10 de diciembre<br />
+                                Domingo, 10 de diciembre <br />
                                 11 AM --- Desayuno y Volleybol<br /><br />
 
                             </p>
