--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                 S&aacute;bado, 9 de diciembre <br />
                                 5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
                                 Domingo, 10 de diciembre <br />
-                                11 AM --- Desayuno y Volleybol<br /><br />
+                                11 AM --- Desayuno y voleibol<br /><br />
 
                             </p>
                         </div><!--end column-->
