--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                                 S&aacute;bado, 9 de diciembre 2017 <br />
                                 5:00 PM  <br />
                                 <br />
-                                <div id="google_translate_element"></div><script type="text/javascript">
+                                <!-- <div id="google_translate_element"></div><script type="text/javascript">
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'es,de,en,fa,fr,hr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
     }
-    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
                                 <br /><br />
 
                                 <!-- <img src="img/theinn-large.png" class="theinn" alt="The Inn at Rancho Santa Fe" /> -->
