--- a/index.html
+++ b/index.html
@@ -136,12 +136,8 @@
                                 S&aacute;bado, 9 de diciembre 2017 <br />
                                 5:00 PM  <br />
                                 <br />
-                                <!-- <div id="google_translate_element"></div><script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'es,de,en,fa,fr,hr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
-    }
-    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
-                                <br /><br />
+
+                                <br />
 
                                 <!-- <img src="img/theinn-large.png" class="theinn" alt="The Inn at Rancho Santa Fe" /> -->
                             </p>
@@ -329,6 +325,12 @@
 
                         </div>
 
+                        <div id="google_translate_element"></div><script type="text/javascript">
+                function googleTranslateElementInit() {
+                new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'es,de,en,fa,fr,hr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
+                }
+                </script>
+
                     </section>
 
                     <div style="height: 300px"></div>
@@ -338,6 +340,8 @@
         </div> <!-- #bg-container -->
 
         <script src="js/main-1.6.js"></script>
+
+        <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
         <script>
           var _gaq = _gaq || [];
