--- a/index.html
+++ b/index.html
@@ -325,11 +325,13 @@
 
                         </div>
 
-                        <div id="google_translate_element"></div><script type="text/javascript">
+                        <!-- <div id="google_translate_element"></div><script type="text/javascript">
                 function googleTranslateElementInit() {
                 new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'es,de,en,fa,fr,hr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
                 }
                 </script>
+                <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
+
 
                     </section>
 
@@ -341,7 +343,6 @@
 
         <script src="js/main-1.6.js"></script>
 
-        <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
