adding como llegar and fixing description

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>AyD</title>
-        <meta name="description" content="Welcome to the wedding website for Sarah and Brad's Big Day!">
+        <title>Ana y Daniel</title>
+        <meta name="description" content="Bienvenidos a la p&aacute;gina de la boda de Ana y Daniel">
 
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
@@ -240,20 +240,20 @@
                         </div><!--end column-->
 
                         <div class="column right">
-                            <!-- <h2>COMO LLEGAR</h2> -->
-                             <!-- <p>
-                                 Northbound from San Diego <br /><br />
-
-                                Take Interstate 5 North to the Villa de La Valle exit #36.  Turn right (east) onto Via de La Valle, and proceed for 4 miles. After crossing La Gracia, turn left on Via de Santa Fe following the signs to Rancho Santa Fe.  At the first stop sign, turn left onto Paseo Delicias and drive 2 blocks to a five way stop.  Take a slight right onto Linea del Cielo and proceed for one block.  The Inn is located on the left side of the road at 5951 Linea del Cielo.
+                            <h2>COMO LLEGAR</h2>
+                             <p>
+                                Tomar vuelo a Puerto Vallarta (PVR) y de ahi tomar un taxi a Sayulita.
+                                Los taxis en el area son caros. El viaje a Sayulita sale entre $700 a $900 pesos.
+                                Recomendamos tomarlos en grupo.
                                 <br /><br />
-
-                                Southbound from LA, Riverside &amp; OC<br /><br />
-
-                                Take Interstate 5 South to the Lomas Santa Fe exit #37.  Turn left (east) onto Lomas Santa Fe, and proceed 4.5 miles.  The road name will change to Linea Del Cielo.  The Inn is located on the right side of the road at 5951 Linea del Cielo.
+                                Alternativamente, uno puede tomar un cami&oacute;
+                                a Sayulita por $40/persona. El cami&oacute;, pasa justo enfrente del aeropuerto,
+                                cruzando la carretera. El lugar preciso de la parada esta marcado en el mapa de
+                                pagina (hay que alerjarse de Sayulita para ver el Aeropuerto de Puerto Vallarta).   <br /><br />
                                 <br />
-                            </p> -->
+                            </p>
 
-                        </div><!--end column-->
+                        </div>
 
                         <div class="clearfix"></div>
 
