--- a/index.html
+++ b/index.html
@@ -209,15 +209,9 @@
                             <p>
                                 Casa Nawalli<br />
                                 Miramar 13<br />
-                                <a href="https://www.casawalli.com">Website</a> <br />
+                                <a href="https://www.casanawalli.com">Website</a> <br />
                                 <a href="tel:52-329-291-3087">+52 (329) 291 3087</a> <br />
                                 $120 --- $180 USD<br />
-                                <br />
-                                Villa Amor<br />
-                                Camino a Playa los Muertos S/N<br />
-                                <a href="http://www.villaamor.com">Website</a> <br />
-                                <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br />
-                                $230 --- $265 USD<br />
                                 <br />
                                 Casa Love<br />
                                 Delfines 9<br />
@@ -230,6 +224,12 @@
                                 <a href="http://hotelhafasayulita.com">Website</a> <br />
                                 <a href="tel:52-329-291-3806">+52 (329) 291 3806</a> <br />
                                 $50 --- $85 USD<br />
+                                <br />
+                                Villa Amor<br />
+                                Camino a Playa los Muertos S/N<br />
+                                <a href="http://www.villaamor.com">Website</a> <br />
+                                <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br />
+                                $230 --- $265 USD<br />
                                 <br />
                                 M&aacute;s opciones<br />
                                 <a href="http://www.sayulitalife.com">Sayulita Life</a> <br />
