--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
                         <div class="column right">
                             <h2>COMO LLEGAR</h2>
                              <p>
-                                Tomar vuelo a Puerto Vallarta (PVR) y de ahi tomar un taxi a Sayulita.
-                                Los taxis en el area son caros. El viaje a Sayulita sale entre $700 a $900 pesos.
+                                Tomar vuelo a Puerto Vallarta (PVR) y de ah&iacute; tomar un taxi a Sayulita.
+                                El taxi a Sayulita sale en $850 pesos con <a href="http://www.tripvallarta.com">Trip Vallarta</a>.
                                 Recomendamos tomarlos en grupo.
                                 <br /><br />
-                                Alternativamente, uno puede tomar un cami&oacute;
-                                a Sayulita por $40/persona. El cami&oacute;, pasa justo enfrente del aeropuerto,
+                                Alternativamente, uno puede tomar un cami&oacute;n
+                                a Sayulita por $40/persona. El cami&oacute;n, pasa justo enfrente del aeropuerto,
                                 cruzando la carretera. El lugar preciso de la parada esta marcado en el mapa de
                                 pagina (hay que alerjarse de Sayulita para ver el Aeropuerto de Puerto Vallarta).   <br /><br />
                                 <br />
