--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
                                 Casa Nawalli<br />
                                 Miramar 13<br />
                                 <a href="https://www.casanawalli.com">Website</a> <br />
-                                <a href="tel:52-329-291-3087">+52 (329) 291 3087</a> <br />
+                                (LLeno)
+                                <!-- <a href="tel:52-329-291-3087">+52 (329) 291 3087</a> <br /> -->
                                 $120 --- $180 USD<br />
                                 <br />
                                 Casa Love<br />
@@ -247,9 +248,9 @@
                                 Recomendamos tomarlos en grupo.
                                 <br /><br />
                                 Alternativamente, uno puede tomar un cami&oacute;n
-                                a Sayulita por $40/persona. El cami&oacute;n, pasa justo enfrente del aeropuerto,
-                                cruzando la carretera. El lugar preciso de la parada esta marcado en el mapa de
-                                pagina (hay que alerjarse de Sayulita para ver el Aeropuerto de Puerto Vallarta).   <br /><br />
+                                a Sayulita por $40 pesos/persona. El cami&oacute;n pasa justo en frente del aeropuerto,
+                                cruzando la carretera. El lugar preciso de la parada est&aacute; marcado en el mapa de la
+                                p&aacute;gina (hay que hacer zoom-out de Sayulita para ver el Aeropuerto de Puerto Vallarta).   <br /><br />
                                 <br />
                             </p>
 
