--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                 Casa Nawalli<br />
                                 Miramar 13<br />
                                 <a href="https://www.casanawalli.com">Website</a> <br />
-                                (LLeno)
+                                (LLeno)<br />
                                 <!-- <a href="tel:52-329-291-3087">+52 (329) 291 3087</a> <br /> -->
                                 $120 --- $180 USD<br />
                                 <br />
