--- a/index.html
+++ b/index.html
@@ -149,23 +149,24 @@
                         <div class="column full">
                             <h2>ITINERARIO</h2>
                             <p>
-                                Viernes, 8 de diciembre <br />
+                                VIERNES, 8 DE DICIEMBRE<br />
                                 <!-- 4 a 7 PM  Despedida para Ana (s&oacute;lo mujeres) Don Pedro's<br /> -->
-                                8 a 10 PM --- Fiesta de bienvenida --- Lugar por confirmar<br /><br />
-                                S&aacute;bado, 9 de diciembre <br />
+                                9 AM a 3 PM --- Tour en barco a las <a href="https://es.wikipedia.org/wiki/Islas_Marietas">Islas Marietas</a> --- Salida a las 9 en punto en el Chocobanana (<a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=16&ll=20.86931, -105.44069">ver mapa</a>)<br />
+                                5 PM --- Coctel de bienvenida --- Don Pedro's (<a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=16&ll=20.87006, -105.44155">ver mapa</a>)<br /><br />
+                                S&Aacute;BADO, 9 DE DICIEMBRE <br />
                                 5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
-                                Domingo, 10 de diciembre <br />
-                                11 AM --- Desayuno y voleibol<br /><br />
+                                DOMINGO, 10 DE DICIEMBRE <br />
+                                11 AM --- Desayuno y voleibol<br />
 
                             </p>
                         </div><!--end column-->
 
-                        <div class="clearfix"></div>
+                        <!-- <div class="clearfix"></div>
 
                         <div class="column full">
                             <div class="hr-t"></div>
                             <div class="hr-b"></div>
-                        </div>
+                        </div> -->
 
                         <!-- <h2>BRIDAL PARTY</h2>
 
@@ -316,7 +317,7 @@
                         <!-- <h1>RSVP</h1> -->
 
                         <div class="column full" >
-                            <p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeoOxo5RulmWVwIl0PETNcyZJlsVW4bby8WOu6kNc-8RFozVQ/viewform?embedded=true" width="100%" height="1010" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></p>
+                            <p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeoOxo5RulmWVwIl0PETNcyZJlsVW4bby8WOu6kNc-8RFozVQ/viewform?embedded=true" width="100%" height="1230" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></p>
 
                             <!-- <p>Due to the nature of city life (not a great deal of storage space), we have decided to embrace the HONEYMOON REGISTRY site.  However, if your prefer the traditional route, we are registered at Williams Sonoma, Sur La Table, &amp; Macy's.  A link for the registry sites will be coming soon!</p>
                             <p>
