--- a/index.html
+++ b/index.html
@@ -208,12 +208,21 @@
 
                             <h2>HOTELES</h2>
                             <p>
-                                Casa Nawalli<br />
+                                Casa Nawalli (LLeno)<br />
                                 Miramar 13<br />
                                 <a href="https://www.casanawalli.com">Website</a> <br />
-                                (LLeno)<br />
                                 <!-- <a href="tel:52-329-291-3087">+52 (329) 291 3087</a> <br /> -->
                                 $120 --- $180 USD<br />
+                                <br />
+                                Los Almendros<br />
+                                Calle Chiripa 19<br />
+                                <a href="http://www.losalmendrossayulita.com">Website</a> <br />
+                                $215 -- $245 USD (2 Bedroom Villa)<br />
+                                <br />
+                                Hotelito Los Sue&ntilde;os<br />
+                                Calle Rosalio Tapia 10<br />
+                                <a href="http://www.hotelitolossuenos.com">Website</a> <br />
+                                $145 -- $183 USD<br />
                                 <br />
                                 Casa Love<br />
                                 Delfines 9<br />
