--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                             <p>
                                 VIERNES, 8 DE DICIEMBRE<br />
                                 <!-- 4 a 7 PM  Despedida para Ana (s&oacute;lo mujeres) Don Pedro's<br /> -->
-                                9 AM a 3 PM --- Tour en barco a las <a href="https://es.wikipedia.org/wiki/Islas_Marietas">Islas Marietas</a> --- Salida a las 9 en punto en el Chocobanana (<a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.86931, -105.44069">ver mapa</a>)<br />
-                                5 PM --- Coctel de bienvenida --- Don Pedro's (<a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87006, -105.44155">ver mapa</a>)<br /><br />
+                                9 AM a 3 PM --- Tour en barco a las <a href="https://es.wikipedia.org/wiki/Islas_Marietas">Islas Marietas</a> (cupo limitado) --- Salida a las 9 en punto del <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.86931, -105.44069">Chocobana</a>.<br />
+                                5 PM --- Coctel de bienvenida --- <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87006, -105.44155">Don Pedro's</a><br /><br />
                                 S&Aacute;BADO, 9 DE DICIEMBRE <br />
                                 5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
                                 DOMINGO, 10 DE DICIEMBRE <br />
@@ -259,7 +259,7 @@
                                 <br /><br />
                                 Alternativamente, uno puede tomar un cami&oacute;n
                                 a Sayulita por $40 pesos/persona. El cami&oacute;n pasa justo en frente del aeropuerto,
-                                cruzando la carretera. El <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.67751, -105.24762">lugar preciso de la parada</a> est&aacute; marcado en el mapa de la
+                                cruzando la carretera. El <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=18&ll=20.67751, -105.24762">lugar preciso de la parada</a> est&aacute; marcado en el mapa de la
                                 p&aacute;gina (hay que hacer zoom-out de Sayulita para ver el Aeropuerto de Puerto Vallarta). <br /><br />
                                 <br />
                             </p>
