--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                 <br />
                                 M&aacute;s opciones<br />
                                 <a href="http://www.sayulitalife.com">Sayulita Life</a> <br />
-                                <a href="http://www.airbnb.com">Airbnb</a> <br />
+                                <a href="https://www.airbnb.com/s/Sayulita--Mexico/homes?adults=2&allow_override%5B%5D=&checkin=2017-12-07&checkout=2017-12-10&guests=2&pets=false">Airbnb</a> <br />
 
 
                             </p>
