adding food stuff

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <ul>
                             <!-- <li><a href="#brideandgroom">THE BRIDE &amp; GROOM</a></li> -->
                             <li><a href="#wedding">BODA</a></li>
-                            <li><a href="#accomodations">HOSPEDAJE</a></li>
+                            <li><a href="#accomodations">SAYULITA</a></li>
                             <li><a href="#registry">RSVP</a></li>
                             <!-- <li><a href="http://sarahlovesbradley.tumblr.com" target="_blank">BLOG</a></li> -->
                         </ul>
@@ -155,8 +155,8 @@
                                 5 PM --- Coctel de bienvenida --- <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87006, -105.44155">Don Pedro's</a><br /><br />
                                 S&Aacute;BADO, 9 DE DICIEMBRE <br />
                                 5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
-                                DOMINGO, 10 DE DICIEMBRE <br />
-                                11 AM --- Desayuno y voleibol<br />
+                                <!-- DOMINGO, 10 DE DICIEMBRE <br /> -->
+                                <!-- 11 AM - Desayuno y voleibol<br /> -->
 
                             </p>
                         </div><!--end column-->
@@ -202,7 +202,7 @@
 
                     <section id="accomodations" class="clearfix">
 
-                        <h1>Hospedaje</h1>
+                        <h1>Sayulita</h1>
 
                         <div class="column left">
 
@@ -236,12 +236,12 @@
                                 <a href="tel:52-329-291-3806">+52 (329) 291 3806</a> <br />
                                 $50 --- $85 USD<br />
                                 <br />
-                                Villa Amor<br />
-                                Camino a Playa los Muertos S/N<br />
-                                <a href="http://www.villaamor.com">Website</a> <br />
-                                <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br />
-                                $230 --- $265 USD<br />
-                                <br />
+                                <!-- Villa Amor<br /> -->
+                                <!-- Camino a Playa los Muertos S/N<br /> -->
+                                <!-- <a href="http://www.villaamor.com">Website</a> <br /> -->
+                                <!-- <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br /> -->
+                                <!-- $230 - $265 USD<br /> -->
+                                <!-- <br /> -->
                                 M&aacute;s opciones<br />
                                 <a href="http://www.sayulitalife.com">Sayulita Life</a> <br />
                                 <a href="https://www.airbnb.com/s/Sayulita--Mexico/homes?adults=2&allow_override%5B%5D=&checkin=2017-12-07&checkout=2017-12-10&guests=2&pets=false">Airbnb</a> <br />
@@ -263,6 +263,29 @@
                                 p&aacute;gina (hay que hacer zoom-out de Sayulita para ver el Aeropuerto de Puerto Vallarta). <br /><br />
                                 <br />
                             </p>
+                            <h2>COMIDA</h2>
+                                <p>
+                                Mariscos / seafood<br />
+                                <a href="https://www.tripadvisor.com/Restaurant_Review-g445056-d3687104-Reviews-El_Jakal_seafood-Sayulita_Pacific_Coast.html">El Jakal</a><br />
+                                <a href="https://www.yelp.com/biz/barracuda-sayulita">Barracuda</a><br />
+                                <a href="https://www.yelp.com/biz/bichos-sayulita">Bichos</a><br />
+                                <br />
+                                Unas fr&iacute;as / beer<br />
+                                <a href="https://www.yelp.com/biz/palmar-trapiche-sayulita">Palmar trapiche</a><br />
+                                <br />
+                                Comida mexicana / mexican food<br />
+                                <a href="https://www.yelp.com/biz/yeikame-sayulita">Yeikame</a><br />
+                                <a href="https://www.yelp.com/biz/natys-cocina-sayulita">Naty's</a><br />
+                                <br />
+                                Desayunos / breakfast<br />
+                                <a href="https://www.yelp.it/biz/paninos-sayulita">Paninos</a><br />
+                                <a href="https://www.yelp.com/biz/yah-yah-caf%C3%A9-sayulita">Yah-Yah Cafe</a><br />
+                                </p>
+
+
+
+
+
 
                         </div>
 
