--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <!-- <li><a href="#brideandgroom">THE BRIDE &amp; GROOM</a></li> -->
                             <li><a href="#wedding">BODA</a></li>
                             <li><a href="#accomodations">SAYULITA</a></li>
-                            <li><a href="#registry">RSVP</a></li>
+                            <li><a href="#registry">REGISTRY/RSVP</a></li>
                             <!-- <li><a href="http://sarahlovesbradley.tumblr.com" target="_blank">BLOG</a></li> -->
                         </ul>
 
@@ -346,8 +346,11 @@
 
                     <section id="registry" class="clearfix">
 
-                        <!-- <h1>RSVP</h1> -->
+                        <h1>RSVP</h1> 
 
+                        <div class="column full" align="center"><a href="http://www.wanderable.com/hm/anaydaniel" target="_blank"><img alt="My Wanderable Honeymoon Registry" src="http://res.cloudinary.com/wanderable/image/upload/c_scale,w_375/v1398120426/wanderable_hm.jpg"></a></div>
+                        
+                        
                         <div class="column full" >
                             <p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeoOxo5RulmWVwIl0PETNcyZJlsVW4bby8WOu6kNc-8RFozVQ/viewform?embedded=true" width="100%" height="1630" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></p>
 
@@ -365,7 +368,6 @@
                 }
                 </script>
                 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
-
 
                     </section>
 
